welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: illegal start of simple pattern
	var new Array[Int](num);
            ^golomb:2: error: '=' expected but ';' found.
	var new Array[Int](num);
                               ^